# aws-generative-ai-document-processing-solution

./: .gitignore  AGENTS.md  README.md  app.py  cdk.json  config.yml  pyproject.toml
.github/: copilot-instructions.md
cdk_stack/: __init__.py  config.py  iam.py  lambdas.py  networking.py  stack.py  state_machine.py
deploy_code/bedrockenrichment/: lambda_function.py
deploy_code/bucketbootstrap/: lambda_function.py
deploy_code/chunkbuild/: lambda_function.py
deploy_code/chunkenrichment/: lambda_function.py
deploy_code/docxextract/: lambda_function.py
deploy_code/embedding/: lambda_function.py
deploy_code/extractresultvalidation/: lambda_function.py
deploy_code/indexwriter/: lambda_function.py
deploy_code/inputvalidation/: lambda_function.py
deploy_code/kickoff/: lambda_function.py
deploy_code/legacyofficeconvert/: lambda_function.py
deploy_code/multipagepdfa2i_bedrockenrichment/: lambda_function.py
deploy_code/multipagepdfa2i_chunkbuild/: lambda_function.py
deploy_code/multipagepdfa2i_docxextract/: lambda_function.py
deploy_code/multipagepdfa2i_embedding/: lambda_function.py
deploy_code/multipagepdfa2i_extractresultvalidation/: lambda_function.py
deploy_code/pdfextract/: lambda_function.py
docs/: README.md  error-handling.md  excel-extraction.md  output-artifacts.md  powerpoint-extraction.md  production-configuration.md  repository-guide.md  word-extraction.md
tests/: __init__.py  helpers.py  test_chunkbuild_xlsx.py  test_indexwriter.py  test_pdfextract.py  test_state_machine.py  test_updatestatus.py  test_xlsxextract.py
(+13 files in other folders)
